# KataCAD

./: .gitattributes  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/api/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml  railway.json
apps/api/app/: main.py
apps/api/app/lib/: dossier.py
apps/api/app/lib/cadquery/: base.py  bracket.py  clamp.py  flange.py  gear.py  housing.py  hub.py  manifold.py  plate.py  pulley.py  registry.py  shaft.py
apps/api/app/lib/retrieval/: executor.py  index.py
apps/api/app/prompts/: manufacturing.txt  material.txt  router.txt
apps/api/app/routes/: dossier.py  echo.py  generate.py  health.py
apps/api/app/schemas/: dossier.py  echo.py  generate.py
apps/api/index/: gencad.faiss  parts.jsonl
apps/api/scripts/: build_index.py
apps/api/tests/: test_dossier.py  test_generate.py  test_health.py  test_layer3.py
apps/web/: .env.example  .gitignore  .prettierignore  next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/playground/: PlaygroundClient.tsx  page.tsx
apps/web/app/studio/: StudioClient.tsx  page.tsx
apps/web/components/: ConstructionReveal.tsx  FeatureTree.tsx  GenerationScreen.tsx  HeroGallery.tsx  HeroScene.tsx  HeroThumbnail.tsx  ParameterSliders.tsx  PromptInput.tsx  ReplicadShape.tsx  SectionControl.tsx  SpecSheet.tsx  VerifyPanel.tsx  Viewport.tsx  Wordmark.tsx
apps/web/fixtures/: bracket-default.step
apps/web/lib/: config.ts  nomenclature.ts  theme.ts
apps/web/scripts/: check-heroes.mts  check-import.mts  check-projection.mts  copy-wasm.mjs  generate-fixture.mts
docs/: DEPLOYMENT_DEFERRED.md  PHASE_0_REPO_SETUP.md  REHEARSAL.md
docs/phases/: PHASE_3.md  PHASE_6.md  PHASE_7.md  PHASE_8.md  PHASE_9.md
(+48 files in other folders)
