[project]
name = "katacad-api"
version = "0.1.0"
description = "KatACAD demo backend"
# Upper bound: CadQuery's OpenCascade binding (cadquery-ocp) ships no
# Python 3.14 wheel yet. Build the venv with Python 3.10-3.13.
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.6.0",
  "python-dotenv>=1.0.0",
  "openai>=1.55.0",
  "cadquery>=2.7.0",
  "faiss-cpu>=1.8.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.3.0",
  "black>=24.0.0",
]
# Build-time only — used by scripts/build_index.py to fetch the dataset.
index = [
  "datasets>=2.19.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py311"]
